JWT optional and Trait Types endpoint
